# bothendieck

./: .gitignore  LICENSE  README.md  bothendieck.cabal  config.sample.dhall  config.sample.toml  default.nix  flake.nix
src/: Main.hs  Utils.hs
src/Parts/: Compliment.hs  Eval.hs  MerriamWebster.hs  Moon.hs  NLab.hs  Random.hs  Translate.hs  Typst.hs  URL.hs  Wikimedia.hs  Wiktionary.hs  WolframAlpha.hs
