cabal-version:      3.0
name:               bothendieck
synopsis:           An IRC bot
version:            0.0.0
build-type:         Simple
license:            ISC
license-file:       LICENSE
author:             Naïm Favier
maintainer:         n@monade.li
category:           Network

source-repository head
  type:     git
  location: https://github.com/ncfavier/bothendieck

common common
  default-language: Haskell2010
  default-extensions:
    ApplicativeDo
    BlockArguments
    DeriveAnyClass
    DeriveGeneric
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    TupleSections
    TypeApplications
    ViewPatterns
  ghc-options: -Wall

executable bothendieck
  import: common
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
    Parts.Eval
    Parts.URL
    Parts.Wiktionary
    Utils
  build-depends:
    aeson ^>= 2.0,
    base >= 4.15.1.0 && < 5,
    bytestring ^>= 0.10,
    bytestring-encoding ^>= 0.1,
    case-insensitive ^>= 1.2,
    containers ^>= 0.6,
    directory ^>= 1.3,
    extra ^>= 1.7,
    filepath ^>= 1.4,
    gnuidn ^>= 0.2,
    html-charset ^>= 0.1,
    http-client ^>= 0.7,
    http-client-restricted ^>= 0.0,
    http-client-tls ^>= 0.3,
    http-conduit ^>= 2.3,
    http-media ^>= 0.8,
    irc-client ^>= 1.1.2.0,
    irc-conduit ^>= 0.3,
    lens ^>= 5.0,
    network ^>= 3.1,
    network-ip ^>= 0.3,
    network-uri ^>= 2.6,
    optparse-applicative ^>= 0.16,
    process ^>= 1.6,
    regex-tdfa ^>= 1.3,
    tagsoup ^>= 0.14,
    text ^>= 1.2,
    tomland ^>= 1.3,
