cabal-version:      3.0
name:               bothendieck
synopsis:           An IRC bot
version:            0.0.0
build-type:         Simple
license:            ISC
license-file:       LICENSE
author:             Naïm Favier
maintainer:         n@monade.li
category:           Network

source-repository head
  type:     git
  location: https://github.com/ncfavier/bothendieck

common common
  default-language: GHC2021
  default-extensions:
    ApplicativeDo
    BlockArguments
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ViewPatterns
  ghc-options: -Wall -Wno-name-shadowing

executable bothendieck
  import: common
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
    Parts.Eval
    Parts.MerriamWebster
    Parts.NLab
    Parts.Random
    Parts.Translate
    Parts.Typst
    Parts.URL
    Parts.WolframAlpha
    Parts.Wikimedia
    Utils
  build-depends:
    aeson >= 2.0,
    base >= 4.15.1.0 && < 5,
    bytestring >= 0.10 && < 1,
    bytestring-encoding ^>= 0.1,
    case-insensitive ^>= 1.2,
    crypton-connection ^>= 0.4,
    conduit ^>= 1.3,
    containers ^>= 0.7,
    curl-cookiejar ^>= 0.1,
    data-default,
    directory ^>= 1.3,
    extra ^>= 1.8,
    filepath ^>= 1.5,
    gnuidn ^>= 0.2,
    html-charset ^>= 0.1,
    http-client ^>= 0.7,
    http-client-restricted ^>= 0.1,
    http-client-tls ^>= 0.3,
    http-conduit ^>= 2.3,
    http-media ^>= 0.8,
    irc-client ^>= 1.1.2.0,
    irc-conduit ^>= 0.3,
    lens >= 5 && < 6,
    mtl >= 2 && < 3,
    network >= 3.1 && < 3.3,
    network-ip ^>= 0.3,
    network-uri ^>= 2.6,
    optparse-applicative >= 0.16 && < 1,
    parallel-io ^>= 0.3,
    process ^>= 1.6,
    random ^>= 1.2,
    regex-tdfa ^>= 1.3,
    scalpel ^>= 0.6,
    tagsoup ^>= 0.14,
    text >= 1.2,
    toml-parser ^>= 2.0,
    transformers ^>= 0.6,
    vector >= 0.12,
